# MDCA-Platform

./: README.md
mdca-android/: CMakeLists.txt
mdca-android/src/filesystem/: directory_iterator.cpp  filesystem_common.h  operations.cpp
mdca-android/src/include/: apple_availability.h
mdca-common/: CMakeLists.txt
mdca-common/include/mdca/: activity.hpp  collection-view.hpp  collection.hpp  mdca.hpp
mdca-common/src/: activity.cpp  beanbag-view.cpp  collection-tests.cpp  collection-view-tests.cpp  collection-view.cpp  collection.cpp  config-tests.cpp  mdca.cpp  secure.cpp  secure.tests.cpp  webcapture.cpp
mdca-simulator/: CMakeLists.txt
mdca-simulator/src/: barcode-view-simulator.cpp  photo-view-simulator.cpp
